[tool.poetry]
name = "prefect-pydata-denver-demo"
version = "0.1.0"
description = ""
authors = ["washburp <paul.washburn@pinnacol.com>"]

[tool.poetry.dependencies]
python = "^3.6"
prefect = "^0.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
